; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/bocaj/extr_tap_dances.c_send_diablo_keystroke.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/bocaj/extr_tap_dances.c_send_diablo_keystroke.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@layer_state = common dso_local global i32 0, align 4
@_DIABLO = common dso_local global i64 0, align 8
@KC_1 = common dso_local global i32 0, align 4
@KC_2 = common dso_local global i32 0, align 4
@KC_3 = common dso_local global i32 0, align 4
@KC_4 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_diablo_keystroke(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @layer_state, align 4
  %4 = call i64 @biton32(i32 %3)
  %5 = load i64, i64* @_DIABLO, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %22

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  switch i32 %8, label %21 [
    i32 0, label %9
    i32 1, label %12
    i32 2, label %15
    i32 3, label %18
  ]

9:                                                ; preds = %7
  %10 = load i32, i32* @KC_1, align 4
  %11 = call i32 @tap(i32 %10)
  br label %21

12:                                               ; preds = %7
  %13 = load i32, i32* @KC_2, align 4
  %14 = call i32 @tap(i32 %13)
  br label %21

15:                                               ; preds = %7
  %16 = load i32, i32* @KC_3, align 4
  %17 = call i32 @tap(i32 %16)
  br label %21

18:                                               ; preds = %7
  %19 = load i32, i32* @KC_4, align 4
  %20 = call i32 @tap(i32 %19)
  br label %21

21:                                               ; preds = %7, %18, %15, %12, %9
  br label %22

22:                                               ; preds = %21, %1
  ret void
}

declare dso_local i64 @biton32(i32) #1

declare dso_local i32 @tap(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
